# python-index-now

./: LICENSE  README.rst  setup.cfg
indexnow/: __init__.py  errors.py  search_engine.py  submitter.py
indexnow/tests/: test_index_now.py
