[metadata]
name = python-index-now
packages = ['indexnow'],
version = 0.1
description = 'IndexNow URL submitter for Python'
long_description = file: README.rst
url = https://github.com/tomascejpek/python-index-now
author = Tomáš Cejpek
author_email = tomas.cejpek@gmail.com
license =
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
